--- a/OOT_PZ_Kursevi/OOT_PZ_Kursevi/MainWindow.xaml
+++ b/OOT_PZ_Kursevi/OOT_PZ_Kursevi/MainWindow.xaml
@@ -11,7 +11,9 @@
     
     <Border Padding="10">
         <TabControl Grid.Row="0">
-            <TabItem Header="Dostupni kursevi"></TabItem>
+            <TabItem Header="Dostupni kursevi">
+                <TextBlock >Ovo je jedna promena</TextBlock>
+            </TabItem>
             <TabItem Header="Izaberi kurs i prijavi se"></TabItem>
             <TabItem Header="Upravljaj kursevima"></TabItem>
         </TabControl>
