--- a/OOT_PZ_Kursevi/OOT_PZ_Kursevi/MainWindow.xaml
+++ b/OOT_PZ_Kursevi/OOT_PZ_Kursevi/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OOT_PZ_Kursevi"
         mc:Ignorable="d"
-        Title="Kursevi" Height="720" Width="1280" WindowStartupLocation="CenterScreen">
+        Title="Kursevi" Height="1080" Width="1920"
+        WindowState="Maximized" WindowStartupLocation="CenterScreen">
 
     <!-- Glavno pitanje: 1280x720 rezolucija ili FULL screen -->
     
