--- a/OOT_PZ_Kursevi/OOT_PZ_Kursevi/MainWindow.xaml
+++ b/OOT_PZ_Kursevi/OOT_PZ_Kursevi/MainWindow.xaml
@@ -206,18 +206,20 @@
                         <RowDefinition Height="5*"/>
                         <RowDefinition Height="0.5*"/>
                     </Grid.RowDefinitions>
-                    <TreeView x:Name="MyTreeView" Grid.Column="0" Grid.Row="0" FontSize="30" MouseDoubleClick="MyTreeView_MouseDoubleClick">
+                    <TextBlock Text="Klinkite dva puta kurs na koji zelite da se prijavite" Margin="30 0 0 0" FontWeight="Bold"/>
+                    <TreeView x:Name="MyTreeView" Grid.Column="0" Grid.Row="0" FontSize="30" MouseDoubleClick="MyTreeView_MouseDoubleClick"  Background="#FFCCCCCC" Margin="30">
                         
                     </TreeView>
-                    <ListView x:Name="Korpa" Grid.Row="0" Grid.Column="1">
+                    <ListView x:Name="Korpa" Grid.Row="0" Grid.Column="1"  Background="#FFCCCCCC" Margin="30">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="Naziv" DisplayMemberBinding="{Binding Naziv}" Width="250"/>
-                                <GridViewColumn Header="Kategorija" DisplayMemberBinding="{Binding Kategorija}" Width="250"/>
+                                <GridViewColumn Header="Naziv" DisplayMemberBinding="{Binding Naziv}" Width="270"/>
+                                <GridViewColumn Header="Kategorija" DisplayMemberBinding="{Binding Kategorija}" Width="210"/>
+                                <GridViewColumn Header="Cena" DisplayMemberBinding="{Binding Cena}" Width="200"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Button x:Name="Potvrdi" Content="Potvrdi prijavu" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Height="40" Width="200" Click="Potvrdi_Click"  />
+                    <Button x:Name="Potvrdi" Content="POTVRDI PRIJAVU" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Height="40" Width="200" Click="Potvrdi_Click" FontWeight="DemiBold" />
                 </Grid>
             </TabItem>
 
