--- a/OOT_PZ_Kursevi/OOT_PZ_Kursevi/MainWindow.xaml
+++ b/OOT_PZ_Kursevi/OOT_PZ_Kursevi/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:OOT_PZ_Kursevi"
         mc:Ignorable="d"
 
-        Title="Kursevi" Height="1080" Width="1920"
+        Title="Organizacija Kurseva" Height="1080" Width="1920"
         WindowState="Maximized" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Closed="Window_Closed"
         ShowInTaskbar="True" ScrollViewer.CanContentScroll="True">
 
@@ -228,7 +228,7 @@
                 <Grid Margin="20 20 20 20">
 
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="2.5*"/>
                         <RowDefinition Height="3*"/>
                         <RowDefinition Height="0.5*"/>
                     </Grid.RowDefinitions>
@@ -238,6 +238,7 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="0.2*"/>
                             <RowDefinition Height="*"/>
+                            <RowDefinition Height="0.3*"/>
                         </Grid.RowDefinitions>
 
                         <TextBlock Text="KATEGORIJE KURSEVA" FontWeight="Bold" FontSize="26" Grid.Row="0" FontStyle="Italic" VerticalAlignment="Center"/>
@@ -276,6 +277,19 @@
                                 </Style>
                             </DataGrid.RowStyle>
                         </DataGrid>
+
+                        <Grid Grid.Row="2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Button Grid.Column="1" Margin="0 10" Content="IZVEZI KATEGORIJE" FontWeight="DemiBold" 
+                                    x:Name="exportKatBtn" Click="exportToExcelKat"/>
+
+                        </Grid>
+
                     </Grid>
 
                     <Grid Grid.Row="1" Margin="0 10 0 0">
@@ -334,7 +348,7 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <Button Grid.Column="1" Margin="0 10" Content="IZVEZI" FontWeight="DemiBold" Click="exportToExcel"
+                        <Button Grid.Column="1" Margin="0 10" Content="IZVEZI KURSEVE" FontWeight="DemiBold" Click="exportToExcel"
                                 x:Name="exportBtn"/>
 
                     </Grid>
